css cleanup, reverting to older settings
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/config.css.scss.erb
+++ b/app/assets/stylesheets/mohican/config.css.scss.erb
@@ -11,6 +11,7 @@ $mn-colorscheme-2L: #AEF6BF !default;
 $mn-colorscheme-2M: #A0DCA0 !default;
 $mn-colorscheme-2D: #86CA87 !default;
 $mn-colorscheme-2V: #00796B !default;
+$mn-colorscheme-2A: #BE0055 !default;
 
 $mn-colorscheme-3V: #333 !default;
 $mn-colorscheme-3D: #666 !default;
@@ -43,10 +44,8 @@ $mn-qfilter-subheader-background: linear-gradient(to top,$mn-colorscheme-2V,$mn-
 $mn-content-header-background: linear-gradient($mn-colorscheme-1M,$mn-colorscheme-1L) !default;
 $mn-content-footer-background: linear-gradient($mn-colorscheme-1P,$mn-colorscheme-1L) !default;
 $mn-grid-header-container-bg: linear-gradient($mn-colorscheme-2L,$mn-colorscheme-2M) !default;
-$mn-grid-layout-row: 0px !default;
 $grid-client-pager-border-color: #e5c720 !default;
-
-
+$mn-filter-bar-btmPad: 7px !default;
 $mn-filter-bar-dropDown-background-color: $mn-colorscheme-1D !default;
 
 $mn-popup-menu-background-color: $mn-colorscheme-1L !default;
