generically require include directory
Require directory contains only css (not sass) files, and should
thus be required and ahndled by Sprocket rather then @imported
and handled by sass. If classes from included files need to be
overried it should be done so in the mohican.css.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -1,13 +1,14 @@
-@import "includes/angular-multi-select";
+/*
+*= require_tree ./includes
+*= require_self
+*/
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "config";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "rails_bootstrap_forms";
-@import "includes/daterangepicker-bs3";
-@import "includes/css-spinner";
-@import "includes/animate";
 
 // mixins
 
