mnf-reference-grid
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -117,11 +117,15 @@ mn-grid th.mn-sortable {
 }
 
 .mn-grid-data-row {
-  height: 43px;
+  height: 45px;
 }
 
 .mnf-grid-field-ready {
   padding-top: 7px;
+  padding-left: 13px;
+}
+.mnf-grid-ref-field-editing {
+  padding-top: 1px;
   padding-left: 13px;
 }
 .mn-grid-select-box {
