cleanup pager row and two unneccessary classes
Please do not create duplicate classes, use existing if possible

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss.erb
+++ b/app/assets/stylesheets/mohican/mohican.css.scss.erb
@@ -133,6 +133,7 @@ _mn-grid th.mn-sortable {
 }
 .mn-grid-select-box {
   margin-top: 10px !important;
+  font-size:$font-size-base * 3;
 }
 
 mn-grid tr.last-selected {
@@ -453,11 +454,6 @@ mn-item-reports > div, .block {
 .mn-pager-row {
   padding-top: 7px;
   margin: 0 !important;
-  background:
-    $mn-content-footer-background top left,
-    linear-gradient(315deg, transparent 10px, $mn-colorscheme-1L 0) bottom right;
-  background-size: 100% 68%;
-  background-repeat: no-repeat;
 }
 
 .mn-content-footer-status-msg {
@@ -574,16 +570,9 @@ td.mn-content-container {
   background-color: rgba(#999, .1);
 }
 
-.thirdWidth {
-  width: 33%;
-}
 
-.baseFont1_5x {
+.grid-footer-bar-filter-icon {
   font-size:$font-size-base * 1.5;
-}
-
-.baseFont3x {
-  font-size:$font-size-base * 3;
 }
 
 .left {
