cleaned up menu for mohican basic
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -12,8 +12,10 @@ $grid-float-breakpoint: 890px !default;
 @import "font-awesome";
 @import "rails_bootstrap_forms";
 
-.zeljko4 {
-  width: $grid-float-breakpoint;
+// Following should be commented when wanting to show demo features.
+// It should not be removed.
+.demo-feature {
+  display: none;
 }
 
 
