fix bootstrap jumbotron
As noticed on the link bellow, there is a problem when jumbotron is in
a fluid container. This fixes that and will likely be unneccessar with
the nxt bootstrap release.

https://github.com/twbs/bootstrap/issues/14337

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -37,6 +37,11 @@ a.navbar-brand {
   background:$mn-brand-bg;
 }
 
+// Following line is a fix to Bootstrap, which is likely to be included in the nxt release
+.container-fluid .jumbotron {
+  border-radius: 6px;
+}
+
 .btn-toolbar {
   margin-bottom: $mn-filter-bar-btmPad;
 }
